objects/EFPIO__EventLog__c.object
<CustomObject>
    <description>Orchestration Event</description>
    <fields>
        <fullName>EFPIO__CorrelationId__c</fullName>
        <description>Correlation Id</description>
        <label>Correlation Id</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__Details__c</fullName>
        <label>Event Messages</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EFPIO__FullyQualifiedClassName__c</fullName>
        <description>Fully Qualified Class Name (including Namespace if applicable) containing the Execute method to Call</description>
        <label>Fully Qualified Class Name w/ Namespace</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__Parent_EventLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the Parent Orchestration Event Log object. If this is set, this is a child event.</description>
        <label>Parent Event Log</label>
        <referenceTo>EFPIO__EventLog__c</referenceTo>
        <relationshipLabel>Parent Orchestration Event Log</relationshipLabel>
        <relationshipName>EventLog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFPIO__PerformAsync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the the intent of this event is to be run asynchronously in a different transaction scope via a Queuable or run Synchronously in the executing transaction scope.</description>
        <label>Perform Asynchronously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EFPIO__Registry__c</fullName>
        <description>Associated Package Registry</description>
        <label>Associated Package Registry</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__Status__c</fullName>
        <description>Status of the Event</description>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFPIO__Timestamp__c</fullName>
        <label>Timestamp</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFPIO__TransactionLog__c</fullName>
        <description>Transaction Log External Id if applicable</description>
        <label>TransactionLogEID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Orchestration Event Log</label>
    <nameField>
        <displayFormat>EL-{0000}</displayFormat>
        <label>Event Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orchestration Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>